09-14-2007  Valek Filippov  <frob@df.ru>

    * wmffigs.py, emfdraw.py: Fixed arc/pie/chors for 'intentionally wrong' cases.
    * test/*: added dir with testing files and screenshots of them.
    
09-12-2007  Valek Filippov  <frob@df.ru>

    Version 0.0.4
    * pywmf.py: Improved EOF checking
    * wmffigs.py, emfdraw.py: Fixed roundrect for 'intentionally wrong' cases, some code clean-up
    * emf*: added license statement
    * pyemf.py: added while Rob will make a release with load_mem function

09-04-2007  Valek Filippov  <frob@df.ru>

    * Version 0.0.3.
      Merged with pyemfvu and renamed to pymfvu.
      Implemented line cap/join.
      Implemented palette.
      Hexdump is switched off by default.
      Reimplemented WindowOrg/Ext.
  
08-18-2007  Valek Filippov  <frob@df.ru>

    * wmftext.py: Fixed Symbol font translation.
    
08-17-2007  Valek Filippov  <frob@df.ru>

    0.0.1 version has been published.